# enpm702-fall-2025-ROS

./: README.md
Lecture10/doc/: ros-bashrc-function.txt  ros-zshrc-function.txt
Lecture10/first_package/: CMakeLists.txt  package.xml
Lecture10/first_package/include/first_package/: hello_node.hpp
Lecture10/first_package/src/: hello_node.cpp  main.cpp
Lecture10/publisher_demo/: CMakeLists.txt  package.xml
Lecture10/publisher_demo/include/publisher_demo/: publisher_demo.hpp
Lecture10/publisher_demo/src/: main.cpp  publisher_demo.cpp
Lecture10/subscriber_demo/: CMakeLists.txt  package.xml
Lecture10/subscriber_demo/include/subscriber_demo/: subscriber_demo.hpp
Lecture10/subscriber_demo/src/: main.cpp  subscriber_demo.cpp
Lecture11/executors_demo/: CMakeLists.txt  package.xml
Lecture11/executors_demo/include/executors_demo/: color_utils.hpp  mutex_reentrant.hpp  single_threaded.hpp  two_mutex.hpp
Lecture11/executors_demo/src/: mutex_reentrant.cpp  single_threaded.cpp  two_mutex.cpp
Lecture11/launch_files_demo/: CMakeLists.txt  package.xml
Lecture11/launch_files_demo/include/launch_files_demo/: camera_demo_node.hpp  color_utils.hpp  lidar_demo_node.hpp  processing_demo_node.hpp  temperature_demo_node.hpp
Lecture11/launch_files_demo/launch/: demo1.launch.py  demo2.launch.py  demo3.launch.py  demo4.launch.py  demo5.launch.py  demo6.launch.py
Lecture11/launch_files_demo/src/: camera_demo_node.cpp  lidar_demo_node.cpp  processing_demo_node.cpp  temperature_demo_node.cpp
Lecture11/qos_demo/: CMakeLists.txt  package.xml
Lecture11/qos_demo/include/qos_demo/: sensor_monitor.hpp
Lecture11/qos_demo/src/: sensor_monitor.cpp
Lecture11/robot_custom_interfaces/: CMakeLists.txt  package.xml
Lecture11/robot_custom_interfaces/msg/: RobotStatus.msg
Lecture11/robot_interfaces_demo/: CMakeLists.txt  package.xml
Lecture11/robot_interfaces_demo/include/robot_interfaces_demo/: robot_status.hpp
Lecture11/robot_interfaces_demo/src/: robot_status.cpp
Lecture13/aruco_tf_demo/: CMakeLists.txt  package.xml
Lecture13/aruco_tf_demo/config/: aruco_params.yaml  gz_bridge.yaml
Lecture13/aruco_tf_demo/include/aruco_tf_demo/: aruco_detector_node.hpp
Lecture13/aruco_tf_demo/launch/: aruco_tf_demo.launch.py
Lecture13/aruco_tf_demo/log/: latest_list
Lecture13/aruco_tf_demo/rosbot_config/: husarion_world.sdf  rosbot.rviz
Lecture13/aruco_tf_demo/rosbot_config/models/aruco_marker_0/: model.config  model.sdf
Lecture13/aruco_tf_demo/rosbot_config/models/aruco_marker_0/materials/scripts/: aruco_marker_0.material
Lecture13/aruco_tf_demo/rosbot_config/models/aruco_marker_1/: model.config  model.sdf
Lecture13/aruco_tf_demo/rosbot_config/models/aruco_marker_1/materials/scripts/: aruco_marker_1.material
Lecture13/aruco_tf_demo/rosbot_config/models/aruco_marker_2/: model.config  model.sdf
Lecture13/aruco_tf_demo/rosbot_config/models/aruco_marker_2/materials/scripts/: aruco_marker_2.material
Lecture13/aruco_tf_demo/scripts/: generate_markers.py
Lecture13/aruco_tf_demo/src/: aruco_detector_node.cpp
Lecture13/aruco_tf_demo/worlds/: aruco_empty_world.sdf
docs/source/: overview.rst
final_starter/micromouse_cpp/src/: micromouse_node.cpp
