<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>executors_demo</name>
  <version>0.0.0</version>
  <description>A comprehensive ROS2 demonstration package showcasing different executor types and
    callback group configurations. This package includes examples of single-threaded executors,
    multi-threaded executors with reentrant callback groups, mutually exclusive callback groups, and
    camera simulation nodes for remapping demonstrations. The package demonstrates parallel
    execution, thread safety, and parameter management in ROS2 applications.</description>
  <maintainer email="zeidk@umd.edu">zeidk</maintainer>
 <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>