<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_files_demo</name>
  <version>0.0.0</version>
  <description>A ROS2 demonstration package showcasing launch file capabilities including parameter
    passing, node configuration, remapping, and multi-node orchestration. This package provides
    practical examples of launch file syntax, argument handling, conditional launching, and
    systematic deployment of ROS2 applications.</description>
  <maintainer email="zeidk@umd.edu">zeidk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>